♻️ refactor(collector): use getFirst() and restore ConcurrentHashMap per PMD policy
UseGetFirst: classificationAdtvRows.get(0) → getFirst() (Java 21 SequencedCollection).
ConcurrentHashMap 복원: PMD UseConcurrentHashMap 규칙 준수 (WR-01 revert).
fetchHoldingDaysMap/fetchAdtvMap은 단일 스레드이나 프로젝트 PMD 정책을 따른다.